--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 notes/**
 learning/** 
+log/**
 
 **/.ipynb_checkpoints/**
+
+# 01_workflow
+01_workflow/.env
+01_workflow/.env_encoded
+
+01_workflow/scripts/.venv/**
+01_workflow/kestra-data/** 
+01_workflow/.tmp/**
+
