[dezc-housing] - fix name of task

--- a/01_workflow/flows/housing_local_price_paid.yml
+++ b/01_workflow/flows/housing_local_price_paid.yml
@@ -47,7 +47,7 @@ tasks:
     labels:
       year: "{{inputs.year}}"
 
-  - id: python_task
+  - id: download_price_paid
     type: io.kestra.plugin.scripts.python.Commands
     namespaceFiles:
       enabled: true
