--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ log/**
 **/.ipynb_checkpoints/**
 **/__pycache__/**
 
+# 00_analysis
+00_analysis/data/pp-2015.csv
+
 # 01_workflow
 01_workflow/.env
 01_workflow/.env_encoded
