[dezc-housing] - update docker container image because now including pyarrow in requirements.txt

--- a/01_workflow/flows/housing_local_price_paid.yml
+++ b/01_workflow/flows/housing_local_price_paid.yml
@@ -49,6 +49,7 @@ tasks:
 
   - id: download_price_paid
     type: io.kestra.plugin.scripts.python.Commands
+    containerImage: ghcr.io/kestra-io/pydata:latest # need for pyarrow
     namespaceFiles:
       enabled: true
     beforeCommands:
