--- a/01_workflow/docker-compose.yml
+++ b/01_workflow/docker-compose.yml
@@ -3,9 +3,11 @@ volumes:
     driver: local
   kestra-data:
     driver: local
+  housing-data:
+    driver: local
 
 services:
-  postgres:
+  postgres_kestra_be:
     image: postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
@@ -40,7 +42,7 @@ services:
       KESTRA_CONFIGURATION: |
         datasources:
           postgres:
-            url: jdbc:postgresql://postgres:5432/kestra
+            url: jdbc:postgresql://postgres_kestra_be:5432/kestra
             driverClassName: org.postgresql.Driver
             username: kestra
             password: k3str4
@@ -77,6 +79,30 @@ services:
       - "8080:8080"
       - "8081:8081"
     depends_on:
-      postgres:
+      postgres_kestra_be:
         condition: service_started
 
+  postgres_housing:
+    image: postgres
+    environment:
+      POSTGRES_USER: my_user
+      POSTGRES_PASSWORD: my_password
+      POSTGRES_DB: housing
+    ports:
+      - "5435:5432"
+    volumes:
+      - housing-data:/var/lib/postgresql/data
+    depends_on:
+      kestra:
+        condition: service_started
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=root
+    ports:
+      - "8085:80"
+    depends_on:
+      postgres_housing:
+        condition: service_started
