--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ log/**
 # 01_workflow
 01_workflow/.env
 01_workflow/.env_encoded
+01_workflow/.credentials/**
 
 01_workflow/scripts/.venv/**
 01_workflow/kestra-data/** 
