[dezc-housing] - create new workflow to download price paid data and load raw into gcs

--- a/01_workflow/.env_example
+++ b/01_workflow/.env_example
@@ -1,1 +1,4 @@
 PRICE_PAID_BASE_URL=http://base-url.com
+GCP_PROJECT_ID=housing-project
+GCP_LOCATION=EUROPE-WEST2
+GCP_RAW_BUCKET_NAME=my-bucket-raw
