--- a/01_workflow/flows/local_gcs_price_paid.yml
+++ b/01_workflow/flows/local_gcs_price_paid.yml
@@ -44,7 +44,7 @@ variables:
   csv_data: "{{outputs.download_price_paid.outputFiles['pp-' ~ inputs.year ~ '.csv']}}"
   gcs_raw_file_path: "gs://{{secret('GCP_RAW_BUCKET_NAME')}}/landregistry_price_paid/{{vars.file_name}}.csv"
   parquet_data: "{{outputs.transform_price_paid.outputFiles['pp-' ~ inputs.year ~ '.parquet']}}"
-  gcs_processed_file_path: "gs://{{secret('GCP_PROCESSED_BUCKET_NAME')}}/landregistry_price_paid/{{vars.file_name}}.parquet"
+  gcs_processed_file_path: "gs://{{secret('GCP_PROCESSED_BUCKET_NAME')}}/land_registry_price_paid/year={{inputs.year}}/{{vars.file_name}}.parquet"
 
 tasks:
   - id: set_label
