--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,17 @@ log/**
 01_workflow/.tmp/**
 01_workflow/scripts/src/temp/**
 
+# 02_analytics
+02_analytics/.venv_analytics/
+02_analytics/example/
+
+02_analytics/housing/profiles.yml
+02_analytics/housing/.credentials/
+
+02_analytics/housing/target/
+02_analytics/housing/dbt_packages/
+02_analytics/housing/logs/
+
 # infrastructure
 infrastructure/.credentials/**
 infrastructure/scripts/.venv
