[dezc-housing] - experiment with SyncNamespaceFiles task as an alternative to manually uploading files to kestra as part of configuration (incomplete, not v1)

--- a/01_workflow/.env_example
+++ b/01_workflow/.env_example
@@ -2,3 +2,6 @@ PRICE_PAID_BASE_URL=http://base-url.com
 GCP_PROJECT_ID=housing-project
 GCP_LOCATION=EUROPE-WEST2
 GCP_RAW_BUCKET_NAME=my-bucket-raw
+GCP_PROCESSED_BUCKET_NAME=my-bucket-processed
+GCP_DATASET_NAME=housing
+GITHUB_ACCESS_TOKEN=github_pat_12345
