[dezc-housing] - finalise bigquery dbt flow

--- a/01_workflow/flows/housing_local_bq_dbt.yml
+++ b/01_workflow/flows/housing_local_bq_dbt.yml
@@ -31,7 +31,7 @@ tasks:
       key: manifest.json
       namespace: "{{ flow.namespace }}"
     profiles: |
-      default:
+      housing:
         outputs:
           dev:
             type: bigquery
