--- a/01_workflow/docker-compose.yml
+++ b/01_workflow/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - ./scripts/requirements.txt:/files/requirements.txt
       - ./scripts/src:/files/scripts
       - ./kestra/flows:/local_flows
+      - ../02_dbt/dbt_project/housing:/files/housing
     env_file:
       - .env_encoded
     environment:
@@ -75,6 +76,7 @@ services:
               paths:
                 - /local_flows
                 - /files/scripts
+                - /files/housing
     ports:
       - "8080:8080"
       - "8081:8081"
