[dezc-housing] - fix docker-compose and flow to run dbt commands (needed to add bigquery credentials for kestra and handle namespace file structure i.e. cd into housing folder, which means profile.yml and sa.json are in the parent directory)

--- a/01_workflow/docker-compose.yml
+++ b/01_workflow/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - .tmp/:/tmp/kestra-wd/tmp
       - ./scripts/requirements.txt:/files/requirements.txt
       - ./scripts/src:/files/scripts
-      - ./kestra/flows:/local_flows
+      - ./flows:/local_flows
       - ../02_dbt/dbt_project/housing:/files/housing
     env_file:
       - .env_encoded
