--- a/01_workflow/flows/housing_local_gcs_load_transform_price_paid.yml
+++ b/01_workflow/flows/housing_local_gcs_load_transform_price_paid.yml
@@ -1,4 +1,4 @@
-id: gcs_price_paid
+id: gcs_load_transform_price_paid
 namespace: housing_local
 
 inputs:
@@ -86,6 +86,9 @@ tasks:
     type: io.kestra.plugin.gcp.gcs.Upload
     from: "{{render(vars.parquet_data)}}"
     to: "{{render(vars.gcs_processed_file_path)}}"
+  
+  - id: purge_large_files
+    type: io.kestra.plugin.core.storage.PurgeCurrentExecutionFiles
 
 pluginDefaults:
   - type: io.kestra.plugin.gcp
