--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ log/**
 
 **/.ipynb_checkpoints/**
 **/__pycache__/**
+**/.vscode/** 
+**/.ruff_cache/** 
+**/.pytest_cache/** 
+**/.coverage
 
 # 00_analysis
 00_analysis/data/pp-2015.csv
