--- a/01_workflow/scripts/scripts/requirements.txt
+++ b/01_workflow/scripts/scripts/requirements.txt
@@ -1,13 +1,17 @@
 certifi==2025.1.31
 charset-normalizer==3.4.1
+coverage==7.7.1
 idna==3.10
 kestra==0.21.13
 numpy==2.2.3
 pandas==2.2.3
 pyarrow==19.0.1
 python-dateutil==2.9.0.post0
+pytest==8.3.5
 pytz==2025.1
 requests==2.32.3
+responses==0.25.3
+ruff==0.11.2
 six==1.17.0
 tzdata==2025.1
 urllib3==2.3.0
